2013-01-16  Alan Cutter  <alancutter@chromium.org>

        start-queue.sh does not pass remaining parameters correctly
        https://bugs.webkit.org/show_bug.cgi?id=107054

        Reviewed by Adam Barth.

        start-queue.sh now passes all remaining params to the webkit-patch command.
        Previously only one additional queue parameter could be sent.

        * EWSTools/start-queue.sh:

2013-01-16  Xueqing Huang  <huangxueqing@baidu.com>

        check-webkit-style script cannot running in Chinese windows.
        https://bugs.webkit.org/show_bug.cgi?id=87548

        Reviewed by Darin Adler.

        * Scripts/webkitpy/common/system/platforminfo.py:
        (PlatformInfo._win_version_tuple_from_cmd):

2013-01-16  Dirk Pranke  <dpranke@chromium.org>

        Delete an extraneous print statement.
        https://bugs.webkit.org/show_bug.cgi?id=106562

        Delete the extraneous print statement introduced in r139841.

        * Scripts/webkitpy/layout_tests/views/printing.py:
        (Printer.print_found):

2013-01-16  Zan Dobersek  <zdobersek@igalia.com>

        Please reinstate --pixel
        https://bugs.webkit.org/show_bug.cgi?id=101995

        Reviewed by Dirk Pranke.

        Add the '--pixel' and '--no-pixel' options for NRWT as aliases for
        the '--pixel-tests' (or '-p') and '--no-pixel-tests' options respectively.
        Some developers are still used to these options that were available in the ORWT.

        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        (parse_args):

2013-01-16  Eric Seidel  <eric@webkit.org>

        Remove --shark* support from sunspider/run-sunspider now that Shark is dead
        https://bugs.webkit.org/show_bug.cgi?id=99512

        Reviewed by Darin Adler.

        * Scripts/run-sunspider:

2013-01-16  Eric Seidel  <eric@webkit.org>

        Remove webkitpy Visual Studio files, as core developers are not interested in maintaining them
        https://bugs.webkit.org/show_bug.cgi?id=106036
